--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                     <button type="submit">submit</button>
                </form>
                 {% if prediction %}
-                <p class="result">Result:{{prediction}}</p>
+                <h1 class="result">Result: {{prediction}}</h1>
                 {% endif %}
         </div>
     </div>
